package fr.ul.acl.escape;

public abstract class ViewController {
}
